open-telemetry/otel-collector/k8s-ds-manifest/otel-col-ds-k8s.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-collector
spec:
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      serviceAccountName: otel-collector-sa
      containers:
      - name: otel-collector
        image: otelcol:v1
        command:
        - "/otelcol-contrib"
        - "--config=/conf/otel-collector-config"
        ports:
        - containerPort: 4317 # OTLP gRPC
        - containerPort: 4318 # OTLP HTTP
        volumeMounts:
        - name: otel-collector-config-vol
          mountPath: /conf
        - name: journal-volume
          mountPath: /var/log/journal
          readOnly: true
      volumes:
        - name: otel-collector-config-vol
          configMap:
            name: otel-collector-conf
            items:
              - key: otel-collector-config
                path: otel-collector-config
        - name: journal-volume
          hostPath:
            path: /var/log/journal/
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  ports:
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
  selector:
    app: otel-collector
