open-telemetry/otel-collector/k8s-ds-manifest/ing-otel-col-k8s-devops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-col-devops
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: otel-col-devops.node-02
    http:
      paths:
      - backend:
          service:
            name: otel-collector
            port:
              number: 4318
        path: /
        pathType: Prefix
